feat: 调整部分代理逻辑